--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/styles/base.css">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-
     <!-- Materialize -->
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
     <!-- Materialize END -->
+    <script src="%PUBLIC_URL%/scripts/base.js"></script>
 
     <title>React App</title>
   </head>
